cluster/apps/finance/firefly-iii/fake-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    hajimari.io/appName: Firefly-III
    hajimari.io/enable: "true"
    hajimari.io/icon: currency-usd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: firefly-iii
  namespace: finance
spec:
  ingressClassName: traefik
  rules:
    - host: firefly.${SECRET_DOMAIN}
  tls:
    - hosts:
        - firefly.${SECRET_DOMAIN}
      secretName: firefly-tls
