cluster/apps/finance/firefly-iii/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: firefly-authentik-ingress-route
  namespace: finance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`firefly.${SECRET_DOMAIN}`)
      priority: 1
      middlewares:
        - name: authentik
          namespace: networking
      services:
        - kind: Service
          name: firefly-iii
          namespace: finance
          port: 80
    - kind: Rule
      match: "Host(`firefly.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 2
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
  tls:
    secretName: firefly-tls
